fixed all tests